--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <h1>Steven's Website!</h1>
+<h3>Press here to enter for a chance to win a brand new PS4</h3>
+<button>Enter here</button>
 <p>UNDER CONSTURCTION!</P>
