--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <h1>Steven's Website!</h1>
 <h3>Press here to enter for a chance to win a brand new PS4</h3>
-<a href="google.com"><button>Click here for a chance to win</button></a>
+<a href="google.com">
+  <button>Click here for a chance to win</button>
+  </a>
 <p>UNDER CONSTURCTION!</P>
