--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Steven's Website!</h1>
 <h3>Press here to enter for a chance to win a brand new PS4</h3>
-<a href="google.com">
-  <button>Click here for a chance to win</button>
+<a href="http://goo.gl/forms/wUNeAZ3Seb">
+  <button>Click here to enter</button>
   </a>
 <p>UNDER CONSTURCTION!</P>
