--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<h1>Steven's Website!</h1>
-<h3>Press here to enter for a chance to win a brand new PS4</h3>
-<a href="http://goo.gl/forms/wUNeAZ3Seb">
-  <button>Click here to enter</button>
+<!DOCTYPE html>
+<head>
+  <title>PS4 Giveaway</title>
+</head>
+<body>
+  <h1>Steven's Website!</h1>
+  <h3>Press here to enter for a chance to win a brand new PS4</h3>
+  <a href="http://goo.gl/forms/wUNeAZ3Seb">
+    <button>Click here to enter</button>
   </a>
-<p>UNDER CONSTURCTION!</P>
+</body>
