--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
   <title>PS4 Giveaway</title>
 </head>
-<body>
-  <h1>Steven's Website!</h1>
-  <h3>Press here to enter for a chance to win a brand new PS4</h3>
+<body style="background-color:yellow">
+  <h1 style="color:blue;">Steven's Website!</h1>
+  <h3 style="color:red;">Press here to enter for a chance to win a brand new PS4</h3>
   <a href="http://goo.gl/forms/wUNeAZ3Seb">
-    <button>Click here to enter</button>
+    <button style="background-color:lightgreen">Click here to enter</button>
   </a>
 </body>
