--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
   <title>PS4 Giveaway</title>
 </head>
-<body style="background-color:yellow">
-  <h1 style="color:blue;">Steven's Website!</h1>
-  <h3 style="color:red;">Press here to enter for a chance to win a brand new PS4</h3>
+<body style="background-color:#00BFFF">
+  <h1 style="color:blue;text-align:center;font-family: Comic Sans MS"><strong>Steven's Website!</strong></h1>
+  <h3 style="color:red;font-family: sans-serif">Press here to enter for a chance to win a brand new PS4</h3>
   <a href="http://goo.gl/forms/wUNeAZ3Seb">
     <button style="background-color:lightgreen">Click here to enter</button>
   </a>
