--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
 <body style="background-color:#00BFFF">
   <h1 style="color:blue;text-align:center;font-family: Comic Sans MS"><strong>Steven's Website!</strong></h1>
-  <img src="https://openclipart.org/image/2400px/svg_to_png/211357/PS4-by-scro2003.png" style="width:304px;height:228px;text-align:center">
-  <h3 style="color:red;font-family: sans-serif;text-align:center">Press here to enter for a chance to win a brand new PS4</h3>
+  <img src="https://openclipart.org/image/2400px/svg_to_png/211357/PS4-by-scro2003.png" style="width:304px;height:228px;">
+  <h3 style="color:red;font-family: sans-serif;">Press here to enter for a chance to win a brand new PS4</h3>
   <a href="http://goo.gl/forms/wUNeAZ3Seb">
     <button style="background-color:lightgreen;text-align:center">Click here to enter</button>
   </a>
