--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="http://s3.amazonaws.com/codecademy-content/courses/hour-of-code/js/alphabet.js"></script>
   </head>
-  <body style="background-color:#ff1a1a">
+  <body style="background-color:#000000">
     <canvas id="myCanvas"></canvas>
     <script type="text/javascript" src="http://s3.amazonaws.com/codecademy-content/courses/hour-of-code/js/bubbles.js"></script>
     <script type="text/javascript" src="script.js"></script>
