--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <h1 style="color:blue;text-align:center;font-family: Comic Sans MS"><strong>Vote For Trump!</strong></h1>
   <img src="http://static6.businessinsider.com/image/55918b77ecad04a3465a0a63/nbc-fires-donald-trump-after-he-calls-mexicans-rapists-and-drug-runners.jpg" style="width:304px;height:228px;">
   <h3 style="color:red;font-family: sans-serif;">Press here to vote for Trump</h3>
-  <a href="http://goo.gl/forms/wUNeAZ3Seb">
+  <a href="https://www.donaldjtrump.com">
     <button style="background-color:lightgreen;text-align:center">Vote for Trump</button>
   </a>
 </body>
