Update and rename index.html7 to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="http://s3.amazonaws.com/codecademy-content/courses/hour-of-code/js/alphabet.js"></script>
   </head>
   <body style="background-color:#000000">
-    <h1 color="blue">Hey B!#@*</h1>
+    <h1 color:"blue">Hey B!#@*</h1>
     <canvas id="myCanvas"></canvas>
     <script type="text/javascript" src="http://s3.amazonaws.com/codecademy-content/courses/hour-of-code/js/bubbles.js"></script>
     <script type="text/javascript" src="script.js"></script>
