--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Steven's Page</title>
     <link rel="stylesheet" type="text/css" href="other.css">
+    <link rel="shortcut icon" href="favicon.ico" />
   </head>
   <body>
     <h1>Hello there</h1>
