--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Steven's Page</title>
     <link rel="stylesheet" type="text/css" href="other.css">
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.png" type="image/png">
+    <link rel="shortcut icon" type="image/png" href="http://www.example.com/favicon.png" />
   </head>
   <body>
     <h1>Hello there</h1>
