--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" type="text/css" href="other.css">
   </head>
   <body>
-    <h1>Steven's Page</h1>
+    <div id="title">
+      <h1>Steven's Page</h1>
+    </div>
   </body>
 </html>
