--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
       <nav id="primary_nav_wrap">
   <ul>
     <li class="current-menu-item"><a href="#">Home</a></li>
-    <li><a href="#">Menu 1</a>
+    <li><a href="#">About Me</a>
       <ul>
-        <li><a href="#">Sub Menu 1</a></li>
-        <li><a href="#">Sub Menu 2</a></li>
-        <li><a href="#">Sub Menu 3</a></li>
-        <li><a href="#">Sub Menu 4</a>
+        <li><a href="#">Stuff I like to do</a></li>
+        <li><a href="#">Things I like to eat</a></li>
+        <li><a href="#">What I do for fun</a></li>
           <ul>
             <li><a href="#">Deep Menu 1</a>
               <ul>
@@ -54,10 +53,7 @@
         <li><a href="#">Sub Menu 5</a></li>
       </ul>
     </li>
-    <li><a href="#">Menu 4</a></li>
-    <li><a href="#">Menu 5</a></li>
-    <li><a href="#">Menu 6</a></li>
-    <li><a href="#">Contact Us</a></li>
+    <li><a href="#">Contact Me</a></li>
   </ul>
 </nav>
   </body>
