--- a/index.html
+++ b/index.html
@@ -14,46 +14,34 @@
         <li><a href="#">Stuff I like to do</a></li>
         <li><a href="#">Things I like to eat</a></li>
         <li><a href="#">What I do for fun</a></li>
+        <li><a href="#">Other Stuff</a></li>
+      </ul>
+    </li>
+    <li><a href="#">Giveaways</a>
+      <ul>
+        <li><a href="#">PS4 Giveaway</a></li>
+        <li><a href="#">Xbox One Giveaway</a></li>
+        <li><a href="#">iPhone 6s Plus Giveaway</a></li>
+      </ul>
+    </li>
+    <li><a href="#">Steven's Store</a>
+      <ul>
+        <li class="dir"><a href="#">Electronics</a></li>
+        <li class="dir"><a href="#">Clothes</a>
           <ul>
-            <li><a href="#">Deep Menu 1</a>
-              <ul>
-                <li><a href="#">Sub Deep 1</a></li>
-                <li><a href="#">Sub Deep 2</a></li>
-                <li><a href="#">Sub Deep 3</a></li>
-                <li><a href="#">Sub Deep 4</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Deep Menu 2</a></li>
+            <li><a href="#">Shirts</a></li>
+            <li><a href="#">Pants</a></li>
+            <li><a href="#">Sneakers</a></li>
+            <li><a href="#">Hats</a></li>
+            <li><a href="#">Accesories</a></li>
           </ul>
         </li>
-        <li><a href="#">Sub Menu 5</a></li>
+        <li><a href="#">Toys and Games</a></li>
+        <li><a href="#">Home Improvement</a></li>
+        <li><a href="#">Gift Cards</a></li>
       </ul>
     </li>
-    <li><a href="#">Menu 2</a>
-      <ul>
-        <li><a href="#">Sub Menu 1</a></li>
-        <li><a href="#">Sub Menu 2</a></li>
-        <li><a href="#">Sub Menu 3</a></li>
-      </ul>
-    </li>
-    <li><a href="#">Menu 3</a>
-      <ul>
-        <li class="dir"><a href="#">Sub Menu 1</a></li>
-        <li class="dir"><a href="#">Sub Menu 2 THIS IS SO LONG IT MIGHT CAUSE AN ISSEUE BUT MAYBE NOT?</a>
-          <ul>
-            <li><a href="#">Category 1</a></li>
-            <li><a href="#">Category 2</a></li>
-            <li><a href="#">Category 3</a></li>
-            <li><a href="#">Category 4</a></li>
-            <li><a href="#">Category 5</a></li>
-          </ul>
-        </li>
-        <li><a href="#">Sub Menu 3</a></li>
-        <li><a href="#">Sub Menu 4</a></li>
-        <li><a href="#">Sub Menu 5</a></li>
-      </ul>
-    </li>
-    <li><a href="#">Contact Me</a></li>
+    <li><a href="#">Contact Steven</a></li>
   </ul>
 </nav>
   </body>
