--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </li>
     <li><a href="#">Giveaways</a>
       <ul>
-        <li><a href="#">PS4 Giveaway</a></li>
+        <li><a href="http://goo.gl/forms/wUNeAZ3Seb">PS4 Giveaway</a></li>
         <li><a href="#">Xbox One Giveaway</a></li>
         <li><a href="#">iPhone 6s Plus Giveaway</a></li>
       </ul>
