--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Steven's Page</title>
+    <title>Steven's Website</title>
     <link rel="stylesheet" type="text/css" href="other.css">
   </head>
   <body>
