--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Steven's Website</title>
+    <title>Steven's Fun Page</title>
     <link rel="stylesheet" type="text/css" href="other.css">
   </head>
   <body>
-      <h1>Steven's Page</h1>
+      <h1>Steven's Website</h1>
       <nav id="primary_nav_wrap">
   <ul>
     <li class="current-menu-item"><a href="#">Home</a></li>
