--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <li><a href="#">Giveaways</a>
       <ul>
         <li><a href="http://goo.gl/forms/wUNeAZ3Seb">PS4 Giveaway</a></li>
-        <li><a href="#">Xbox One Giveaway</a></li>
-        <li><a href="#">iPhone 6s Plus Giveaway</a></li>
+        <li><a href="http://goo.gl/forms/v78XI1XgI1goGfck2">Xbox One Giveaway</a></li>
+        <li><a href="http://goo.gl/forms/rvLgLrQDudQQaVHu1">iPhone 6s Plus Giveaway</a></li>
       </ul>
     </li>
     <li><a href="#">Steven's Store</a>
