--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="other.css">
   </head>
   <body>
-      <h1>Steven's Website</h1>
+      <center><h1>Steven's Website</h1></center>
       <nav id="primary_nav_wrap">
   <ul>
     <li class="current-menu-item"><a href="#">Home</a></li>
