--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <li class="current-menu-item"><a href="#">Home</a></li>
     <li><a href="#">About Me</a>
       <ul>
-        <li><a href="1.index">Stuff I like to do</a></li>
+        <li><a href="./1.index">Stuff I like to do</a></li>
         <li><a href="#">Things I like to eat</a></li>
         <li><a href="#">What I do for fun</a></li>
         <li><a href="#">Other Stuff</a></li>
