--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </ul>
     </li>
     <li><a href="#">Games</a></li>
-    <li><a href="#">Contact Steven</a></li>
+    <li><a href="./contactme.html">Contact Steven</a></li>
   </ul>
 </nav>
   </body>
