--- a/contactme.html
+++ b/contactme.html
@@ -3,6 +3,7 @@
   <head>
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="contactme.css">
+    <script src="contactme.js"></script>
   </head>
   <body>
     	<section id="hire">
