--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,203 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="aboutme.css">
+    <script src="aboutme.js"></script>
+  </head>
+  <body>
+    <header>
+	<div class="navbar" role="navigation">
+		<div class="container">
+    	<div class="navbar-header">
+      	<a class="navbar-brand" id="logo" href="#">jQuery Animations</a>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mynav">
+        	<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse" id="mynav">
+      	<ul class="nav navbar-nav navbar-right">
+        	<li><a href="#about">About</a></li>
+          <li><a href="#clients">Clients</a></li>
+          <li><a href="#process">Process</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#blogs">Blogs</a></li>
+        </ul>
+      </div>
+     </div>	
+	</div>
+  <div class="banner">
+    <h2>We help you achieve your goals</h2>
+    <div class="info">
+      <a href="#process" title="">See our process</a>
+      <a href="#clients" title="">See our clients</a> 
+    </div>
+  </div>
+ </header>
+ <section class="about" id="about">
+ 	<div class="container">
+   	<div class="row">
+     	<div class="col-xs-12">
+ 	  		<h2>About us</h2>
+       </div>
+      </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <h4>Our history</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+        <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+        <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <h4>Our vision</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+        <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+        <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <h4>Our values</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+        <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+        <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+      </div>
+    </div>
+ 	</div>	
+ </section> <!-- end of about section-->
+ <hr>
+ <section class="clients" id="clients">
+   <div class="container">
+   	<div class="row">
+     	<div class="col-xs-12">
+     		<h2>Our Clients</h2>
+       </div>
+     </div>
+     <div class="row">
+       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="clients-info">
+          <h3>Client1</h3>	
+        </div>
+       </div>
+       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="clients-info">
+          <h3>Client2</h3>	
+        </div>
+       </div>
+       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="clients-info">
+          <h3>Client3</h3>	
+        </div>
+       </div>
+       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="clients-info">
+          <h3>Client4</h3>	
+        </div>
+       </div>	
+     </div>
+   </div>		
+ </section> <!-- end of clients section--> 
+ <hr>   
+ <section class="process" id="process">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+      	<h2>Our Process</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="method">
+        	<h3>Analyze</h3>
+          <hr>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <h4>1</h4>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="method">
+        	<h3>Develop</h3>
+          <hr>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <h4>2</h4>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="method">
+        	<h3>Test</h3>
+          <hr>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <h4>3</h4>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="method">
+        	<h3>Deploy</h3>
+          <hr>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <h4>4</h4>
+        </div>
+      </div>
+    </div>   
+  </div>
+ </section> <!-- end of method section-->
+ <hr>
+ <section class="testimonials" id="testimonials">
+   <div class="container">
+     <div class="row">
+      <div class="col-xs-12">
+      	<h2>Our Testimonials</h2>
+      </div>
+     </div>
+     <div class="row">
+     	<div class="col-xs-12 col-sm-4">
+       	<blockquote>
+       		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore eligendi a officiis aspernatur nesciunt ducimus, placeat. Eum, ratione maxime fugiat deserunt doloremque laborum hic quisquam in, libero voluptatibus! Assumenda, eligendi.
+         	</p>	
+       </blockquote>	
+     	</div>
+     	<div class="col-xs-12 col-sm-4">
+       	<blockquote>
+       		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore eligendi a officiis aspernatur nesciunt ducimus, placeat. Eum, ratione maxime fugiat deserunt doloremque laborum hic quisquam in, libero voluptatibus! Assumenda, eligendi.
+         	</p>	
+       	</blockquote>	
+     	</div>
+     	<div class="col-xs-12 col-sm-4">
+       	<blockquote>
+       		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore eligendi a officiis aspernatur nesciunt ducimus, placeat. Eum, ratione maxime fugiat deserunt doloremque laborum hic quisquam in, libero voluptatibus! Assumenda, eligendi.
+         	</p>	
+       	</blockquote>	
+     	</div>	
+     </div>
+   </div>	
+ </section><!-- end of testimonials section-->
+ <hr>
+ <section class="blogs" id="blogs">
+   <div class="container">
+     <div class="row">
+       <div class="col-xs-12">
+     		<h2>Latest Blogs</h2>
+       </div>
+     </div>
+     <div class="row">
+       <div class="col-xs-12 col-lg-8">
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar scelerisque aliquet. Aliquam eu ultrices nisl. Mauris sit amet odio tincidunt, congue magna a, malesuada odio. Maecenas egestas metus leo, nec vulputate odio pulvinar sodales. Aenean a nunc nisi. Donec eleifend sodales mauris, ut egestas tellus ultrices nec. Integer in nisl vitae libero lobortis egestas. Proin nisi lacus, iaculis sit amet nibh vel, fringilla pellentesque est.</p>
+         <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut delectus ratione aut est, minus eius, dolorem blanditiis culpa ad iusto, accusamus iure alias nihil voluptatem soluta esse velit laudantium eum.</p>
+         <p class="visible-lg">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</p>
+         <button type="button" class="btn btn-primary">Learn more</button>
+       </div>
+       <div class="visible-lg col-lg-4">
+         <img class="img-responsive" src="http://placehold.it/450x300" />
+       </div>       
+     </div>    
+   </div>
+ </section><!-- end of blogs section-->
+ <footer>
+   <p>Demo by George Martsoukos. <a href="http://www.sitepoint.com/introduction-jquery-scroll-based-animations/">See article</a>.</p>	
+ </footer>
+  </body>
+  </html>
