--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <nav id="primary_nav_wrap">
   <ul>
     <li class="current-menu-item"><a href="#">Home</a></li>
-    <li><a href="#">About Me</a>
+    <li><a href="./aboutme.html">About Me</a>
       <ul>
         <li><a href="/1.index">Stuff I like to do</a></li>
         <li><a href="#">Things I like to eat</a></li>
