--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Steven's Fun Page</title>
+    <title>Steven's Page</title>
     <link rel="stylesheet" type="text/css" href="other.css">
   </head>
   <body>
-      <center><h1>Steven's Website</h1></center>
+    <div id="first_section">
+    <div id="header">
+      <img src="https://www.quia.com/files/quia/users/sophiealix/Hocus_Lotus/bonjour" height="42" width="42">
+      <center><h1>Hello There World</h1></center>
+      </div>
       <nav id="primary_nav_wrap">
   <ul>
     <li class="current-menu-item"><a href="#">Home</a></li>
@@ -45,5 +49,6 @@
     <li><a href="./contactme.html">Contact Steven</a></li>
   </ul>
 </nav>
+</div>
   </body>
 </html>
