--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <div id="first_section">
     <div id="header">
-      <img src="https://www.quia.com/files/quia/users/sophiealix/Hocus_Lotus/bonjour" height="250" width="250">
-      <center><h1>Hello There World</h1></center>
+      <img id="emoji" src="https://www.quia.com/files/quia/users/sophiealix/Hocus_Lotus/bonjour" height="250" width="250">
+      <h1>Hello There World</h1>
       </div>
       <nav id="primary_nav_wrap">
   <ul>
