--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       </div>
       <nav id="primary_nav_wrap">
   <ul>
-    <li class="current-menu-item"><a href="#">Home</a></li>
+    <li class="current-menu-item"><a href="sholguin.github.io">Home</a></li>
     <li><a href="./aboutme.html">About Me</a>
       <ul>
-        <li><a href="/1.index">Stuff I like to do</a></li>
+        <li><a href="#">Stuff I like to do</a></li>
         <li><a href="#">Things I like to eat</a></li>
         <li><a href="#">What I do for fun</a></li>
         <li><a href="#">Other Stuff</a></li>
