--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#">Other Stuff</a></li>
       </ul>
     </li>
-    <li><a href="#">Giveaways</a>
+    <li><a href="./giveaways.html">Giveaways</a>
       <ul>
         <li><a href="http://goo.gl/forms/wUNeAZ3Seb">PS4 Giveaway</a></li>
         <li><a href="http://goo.gl/forms/v78XI1XgI1goGfck2">Xbox One Giveaway</a></li>
