--- a/giveaways.html
+++ b/giveaways.html
@@ -7,8 +7,8 @@
     <script src=giveaways.js"></script>
   </head>
   <body>
-  <a href=""><button>PS4 Giveaway</button></a>
-  <a href=""><button>Xbox One Giveaway</button></a>
-  <a href=""><button>iPhone 6s Plus Giveaway</button></a>
+  <a href="https://docs.google.com/forms/d/1PGXNkw0mjdxBn3aZGMix_z7yaHt1-iXIqsR8jfEvtDY/viewform?c=0&w=1"><button>PS4 Giveaway</button></a>
+  <a href="https://docs.google.com/forms/d/1qDQFnXblRCdaLj7LFKJvKZaA8aREEiMNE1yE1C24n8o/viewform?c=0&w=1"><button>Xbox One Giveaway</button></a>
+  <a href="https://docs.google.com/forms/d/18gUNuZEoI-8oHOXwPwhi8OXuXsRqykMNJgPI695LKnQ/viewform?c=0&w=1"><button>iPhone 6s Plus Giveaway</button></a>
   </body>
 </html>
