--- a/giveaways.html
+++ b/giveaways.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About Me</title>
+    <title>Giveaways</title>
     <link rel="stylesheet" type="text/css" href="giveaways.css">
     <script src=giveaways.js"></script>
   </head>
