--- a/giveaways.html
+++ b/giveaways.html
@@ -7,8 +7,11 @@
     <script src=giveaways.js"></script>
   </head>
   <body>
-  <center><a href="https://docs.google.com/forms/d/1PGXNkw0mjdxBn3aZGMix_z7yaHt1-iXIqsR8jfEvtDY/viewform?c=0&w=1"><button class="myButton">PS4 Giveaway</button></a></center>
-  <center><a href="https://docs.google.com/forms/d/1qDQFnXblRCdaLj7LFKJvKZaA8aREEiMNE1yE1C24n8o/viewform?c=0&w=1"><button class="myButton">Xbox One Giveaway</button></a></center>
-  <center><a href="https://docs.google.com/forms/d/18gUNuZEoI-8oHOXwPwhi8OXuXsRqykMNJgPI695LKnQ/viewform?c=0&w=1"><button class="myButton">iPhone 6s Plus Giveaway</button></a></center>
+  <center><a href="https://docs.google.com/forms/d/1PGXNkw0mjdxBn3aZGMix_z7yaHt1-iXIqsR8jfEvtDY/viewform?c=0&w=1"><button id="p4" class="myButton">PS4 Giveaway</button></a></center>
+  <center><img id="p4_pic" src="smiley.gif" alt="Smiley face" height="42" width="42"></center>
+  <center><a href="https://docs.google.com/forms/d/1qDQFnXblRCdaLj7LFKJvKZaA8aREEiMNE1yE1C24n8o/viewform?c=0&w=1"><button id="xone" class="myButton">Xbox One Giveaway</button></a></center>
+  <center><img id="xone_pic" src="smiley.gif" alt="Smiley face" height="42" width="42"></center>
+  <center><a href="https://docs.google.com/forms/d/18gUNuZEoI-8oHOXwPwhi8OXuXsRqykMNJgPI695LKnQ/viewform?c=0&w=1"><button id="6s" class="myButton">iPhone 6s Plus Giveaway</button></a></center>
+  <center><img id="6s_pic" src="smiley.gif" alt="Smiley face" height="42" width="42"></center>
   </body>
 </html>
