--- a/index.html
+++ b/index.html
@@ -21,13 +21,7 @@
         <li><a href="#">Other Stuff</a></li>
       </ul>
     </li>
-    <li><a href="./giveaways.html">Giveaways</a>
-      <ul>
-        <li><a href="http://goo.gl/forms/wUNeAZ3Seb">PS4 Giveaway</a></li>
-        <li><a href="http://goo.gl/forms/v78XI1XgI1goGfck2">Xbox One Giveaway</a></li>
-        <li><a href="http://goo.gl/forms/rvLgLrQDudQQaVHu1">iPhone 6s Plus Giveaway</a></li>
-      </ul>
-    </li>
+    <li><a href="./giveaways.html">Giveaways</a></li>
     <li><a href="#">Steven's Store</a>
       <ul>
         <li class="dir"><a href="#">Electronics</a></li>
