--- a/contactme.html
+++ b/contactme.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About Me</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" type="text/css" href="contactme.css">
     <script src="contactme.js"></script>
   </head>
   <body>
-    	<section id="hire">
-    <h1>Contact Me</h1>
-    
-    <form>
-	      <div class="field name-box">
-		        <input type="text" id="name" placeholder="Who Are You?"/>
-        		<label for="name">Name</label>
-		        <span class="ss-icon">check</span>
-	      </div>
+    <div class="fun-cube"><i class="fa fa-cube"></i></div>
+<h1>Single input 3D form</h1>
 
-	      <div class="field email-box">
-		        <input type="text" id="email" placeholder="name@email.com"/>
-		        <label for="email">Email</label>
-		        <span class="ss-icon">check</span>
-	      </div>
+<!-- heirarchy: #cuboid > form > div*4(cuboid faces) -->
+<div id="cuboid">
+	<form>
+		<!-- #1 hover button -->
+		<div>
+			<p class="cuboid-text">Subscribe</p>
+		</div>
+		<!-- #2 text input -->
+		<div>
+			<!-- Label to trigger #submit -->
+			<label for="submit" class="submit-icon">
+				<i class="fa fa-chevron-right"></i>
+			</label>
+			<input type="text" id="email" class="cuboid-text" placeholder="Your Email" autocomplete="off"/>
+			<!-- hidden submit button -->
+			<input type="submit" id="submit" />
+		</div>
+		<!-- #3 loading message -->
+		<div>
+			<p class="cuboid-text loader">Just a moment</p>
+		</div>
+		<!-- #4 success message -->
+		<div>
+			<!-- reset/retry button -->
+			<span class="reset-icon"><i class="fa fa-refresh"></i></span>
+			<p class="cuboid-text">Thankyou, we'll be in touch</p>
+		</div>
+	</form>
+</div>
 
-	      <div class="field msg-box">
-		        <textarea id="msg" rows="4" placeholder="Your message goes here..."/></textarea>
-		        <label for="msg">Msg</label>
-		        <span class="ss-icon">check</span>
-	      </div>
+<!-- jQuery -->
+<script src="http://thecodeplayer.com/u/js/jquery-1.9.1.min.js" type="text/javascript"></script>
 
-	      <input class="button" type="submit" value="Send" />
-  </form>
-</section>
   </body>
 </html>
