--- a/contactme.html
+++ b/contactme.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="fun-cube"><i class="fa fa-cube"></i></div>
-<h1>Single input 3D form</h1>
+<h1>Subscribe to our News Letter</h1>
 
 <!-- heirarchy: #cuboid > form > div*4(cuboid faces) -->
 <div id="cuboid">
@@ -28,13 +28,13 @@
 		</div>
 		<!-- #3 loading message -->
 		<div>
-			<p class="cuboid-text loader">Just a moment</p>
+			<p class="cuboid-text loader">Just a moment please</p>
 		</div>
 		<!-- #4 success message -->
 		<div>
 			<!-- reset/retry button -->
 			<span class="reset-icon"><i class="fa fa-refresh"></i></span>
-			<p class="cuboid-text">Thankyou, we'll be in touch</p>
+			<p class="cuboid-text">Thankyou, you have been added to our News Letter list</p>
 		</div>
 	</form>
 </div>
