--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Steven's Page</title>
     <link rel="stylesheet" type="text/css" href="other.css">
+    <script type="text/JavaScript" src="index.js"></script>
   </head>
   <body>
     <div id="first_section">
