--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Steven's Page</title>
     <link rel="stylesheet" type="text/css" href="other.css">
-    <script type="text/JavaScript" src="index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+    <script src="jquery-2.2.3.min.js"></script>
   </head>
   <body>
     <div id="first_section">
