--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </nav>
 </div>
 <div id="copyright">
-  <center><h3>@2016 Steven Productions</h3></center>
+  <center><h3>©2016 Steven Productions</h3></center>
 </div>
   </body>
 </html>
