--- a/giveaways.html
+++ b/giveaways.html
@@ -5,7 +5,7 @@
     <title>Giveaways</title>
     <link rel="stylesheet" type="text/css" href="giveaways.css">
     <script type="text/javascript" src="giveaways.js"></script>
-    <script src="jquery-2.2.3.min.js"></script>
+    <script type="text/javascript" src="jquery-2.2.3.min.js"></script>
   </head>
   <body>
   <center><a href="https://docs.google.com/forms/d/1PGXNkw0mjdxBn3aZGMix_z7yaHt1-iXIqsR8jfEvtDY/viewform?c=0&w=1"><button id="p4" class="myButton">PS4 Giveaway</button></a></center>
