--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <nav id="primary_nav_wrap">
   <ul>
     <li class="current-menu-item"><a href="sholguin.github.io">Home</a></li>
-    <li><a href="./aboutme.html">About Me</a>
+    <li><a href="#">Games</a>
       <ul>
-        <li><a href="#">Stuff I like to do</a></li>
-        <li><a href="#">Things I like to eat</a></li>
-        <li><a href="#">What I do for fun</a></li>
-        <li><a href="#">Other Stuff</a></li>
+        <li><a href="./gmn.html">Guess My Number</a></li>
+        <li><a href="#">Memory Game</a></li>
+        <li><a href="#">Game</a></li>
+        <li><a href="#">Game</a></li>
       </ul>
     </li>
     <li><a href="./giveaways.html">Giveaways</a></li>
@@ -41,8 +41,8 @@
         <li><a href="#">Gift Cards</a></li>
       </ul>
     </li>
-    <li><a href="#">Games</a></li>
-    <li><a href="./contactme.html">Contact Steven</a></li>
+    <li><a href="./contactme.html">News Letter</a></li>
+    <li><a href="#">Contact Steven</a></li>
   </ul>
 </nav>
 </div>
