--- a/giveaways.html
+++ b/giveaways.html
@@ -13,6 +13,6 @@
   <center><a href="https://docs.google.com/forms/d/1qDQFnXblRCdaLj7LFKJvKZaA8aREEiMNE1yE1C24n8o/viewform?c=0&w=1"><button id="xone" class="myButton">Xbox One Giveaway</button></a></center>
   <center><img id="xone_pic" src="http://compass.xbox.com/assets/26/ef/26ef022a-0b6b-4994-9296-a5e897db6fe6.png?n=GwG_Blade-X1-Cross-Sell_648x365.png" height="250" width="250"></center>
   <center><a href="https://docs.google.com/forms/d/18gUNuZEoI-8oHOXwPwhi8OXuXsRqykMNJgPI695LKnQ/viewform?c=0&w=1"><button id="6s" class="myButton">iPhone 6s Plus Giveaway</button></a></center>
-  <center><img id="6s_pic" src="http://store.storeimages.cdn-apple.com/4973/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone6s/silver/iphone6s-silver-select-2015?wid=470&hei=556&fmt=png-alpha&qlt=95&.v=azwkl0" height="250" width="250"></center>
+  <center><img id="iphone" src="http://store.storeimages.cdn-apple.com/4973/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone6s/silver/iphone6s-silver-select-2015?wid=470&hei=556&fmt=png-alpha&qlt=95&.v=azwkl0" height="250" width="250"></center>
   </body>
 </html>
