--- a/giveaways.html
+++ b/giveaways.html
@@ -4,7 +4,7 @@
   <head>
     <title>Giveaways</title>
     <link rel="stylesheet" type="text/css" href="giveaways.css">
-    <script type="text/javascript" src="giveaways.js"></script>
+    <script type="text/javascript" src="giveaway.js"></script>
     <script type="text/javascript" src="jquery-2.2.3.min.js"></script>
   </head>
   <body>
