--- a/gmn.html
+++ b/gmn.html
@@ -15,8 +15,8 @@
 			Guess Number:<br>
 			<input type="text" name="guess"><br>
 		</form><br>
-		<center><button>Submit</button></center>
-		<center><button>Clear</button></center>
+		<center class="buttons"><button>Submit</button></center>
+		<center class="buttons"><button>Clear</button></center>
 		<div id=”response”></div>
 	</body>
 </html
