--- a/gmn.html
+++ b/gmn.html
@@ -15,8 +15,10 @@
 			Guess Number:<br>
 			<input type="text" name="guess"><br>
 		</form><br>
-		<center class="buttons"><button>Submit</button></center>
-		<center class="buttons"><button>Clear</button></center>
+		<center>
+		<button>Submit</button>
+		<button>Clear</button>
+		</center>
 		<div id=”response”></div>
 	</body>
 </html
