--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li><a href="#">Games</a>
       <ul>
         <li><a href="./gmn.html">Guess My Number</a></li>
-        <li><a href="#">Memory Game</a></li>
+        <li><a href="./memory.html">Memory Game</a></li>
         <li><a href="#">Game</a></li>
         <li><a href="#">Game</a></li>
       </ul>
