--- a/gmn.html
+++ b/gmn.html
@@ -12,7 +12,7 @@
 		<h1>I’m thinking of a number between 1 and 100…</h1>
 		<h3>Try to guess it!</h3>
 		<form>
-			Guess Number:<br>
+			Guess A Number<br>
 			<input type="number" name="guess" size="15" placeholder="Your Guess"><br>
 		</form><br>
 		<center>
