--- a/giveaways.html
+++ b/giveaways.html
@@ -4,8 +4,8 @@
   <head>
     <title>Giveaways</title>
     <link rel="stylesheet" type="text/css" href="giveaways.css">
+    <script src="jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="giveaway.js"></script>
-    <script type="text/javascript" src="jquery-2.2.3.min.js"></script>
   </head>
   <body>
   <center id="p4"><a href="https://docs.google.com/forms/d/1PGXNkw0mjdxBn3aZGMix_z7yaHt1-iXIqsR8jfEvtDY/viewform?c=0&w=1"><button id="p5" class="myButton">PS4 Giveaway</button></a></center>
