--- a/giveaways.html
+++ b/giveaways.html
@@ -6,13 +6,23 @@
     <link rel="stylesheet" type="text/css" href="giveaways.css">
     <script src="jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="giveaways.js"></script>
+    <script src="typed.js"></script>
   </head>
   <body>
+  <center><div class="element"></div></center>
   <center id="p5"><a href="https://docs.google.com/forms/d/1PGXNkw0mjdxBn3aZGMix_z7yaHt1-iXIqsR8jfEvtDY/viewform?c=0&w=1"><button id="p4" class="myButton">PS4 Giveaway</button></a></center>
   <center><img id="p4_pic" src="http://iacom1-a.akamaihd.net/produtos/01/00/item/116661/3/116661370_1GG.png" height="250" width="250"></center>
   <center><a href="https://docs.google.com/forms/d/1qDQFnXblRCdaLj7LFKJvKZaA8aREEiMNE1yE1C24n8o/viewform?c=0&w=1"><button id="xone" class="myButton">Xbox One Giveaway</button></a></center>
   <center><img id="xone_pic" src="http://compass.xbox.com/assets/26/ef/26ef022a-0b6b-4994-9296-a5e897db6fe6.png?n=GwG_Blade-X1-Cross-Sell_648x365.png" height="250" width="250"></center>
   <center><a href="https://docs.google.com/forms/d/18gUNuZEoI-8oHOXwPwhi8OXuXsRqykMNJgPI695LKnQ/viewform?c=0&w=1"><button id="6s" class="myButton">iPhone 6s Plus Giveaway</button></a></center>
   <center><img id="iphone" src="http://store.storeimages.cdn-apple.com/4973/as-images.apple.com/is/image/AppleInc/aos/published/images/i/ph/iphone6s/silver/iphone6s-silver-select-2015?wid=470&hei=556&fmt=png-alpha&qlt=95&.v=azwkl0" height="250" width="250"></center>
+    <script>
+  $(function(){
+      $(".element").typed({
+        strings: ["Giveaways", "They are free"],
+        typeSpeed: 0
+      });
+  });
+</script>
   </body>
 </html>
