--- a/giveaways.html
+++ b/giveaways.html
@@ -19,8 +19,8 @@
   <script>
   $(function(){
       $(".element").typed({
-        strings: ["Giveaways", "They are free"],
-        typeSpeed: 0
+        strings: ["Giveaways", "Giveaways", "Giveaways", "Giveaways", "Giveaways"],
+        typeSpeed: 1
       });
   });
   </script>
