--- a/giveaways.html
+++ b/giveaways.html
@@ -19,8 +19,8 @@
   <script>
   $(function(){
       $(".element").typed({
-        strings: ["Giveaways", "Giveaways", "Giveaways", "Giveaways", "Giveaways"],
-        typeSpeed: 1
+        strings: ["Giveaways", "Free PS4", "Free Xbox ONE", "Free iPhone 6s Plus", "Giveaways"],
+        typeSpeed: 0
       });
   });
   </script>
