--- a/giveaways.html
+++ b/giveaways.html
@@ -20,7 +20,11 @@
   $(function(){
       $(".element").typed({
         strings: ["Giveaways", "Free PS4", "Free Xbox ONE", "Free iPhone 6s Plus", "Giveaways"],
-        typeSpeed: 0
+        typeSpeed: 0,
+        backDelay: 500,
+        loop: false,
+        showCursor: true,
+        cursorChar: "|",
       });
   });
   </script>
