--- a/giveaways.html
+++ b/giveaways.html
@@ -21,8 +21,8 @@
       $(".element").typed({
         strings: ["Giveaways", "Free PS4", "Free Xbox ONE", "Free iPhone 6s Plus", "Giveaways"],
         typeSpeed: 0,
-        backDelay: 500,
-        loop: false,
+        backDelay: 1000,
+        loop: true,
         showCursor: true,
         cursorChar: "|",
       });
