--- a/giveaways.html
+++ b/giveaways.html
@@ -19,8 +19,9 @@
   <script>
   $(function(){
       $(".element").typed({
-        strings: ["Giveaways", "Free PS4", "Free Xbox ONE", "Free iPhone 6s Plus", "Giveaways"],
+        strings: ["Giveaways", "Free PS4", "Free Xbox ONE", "Free iPhone 6s Plus"],
         typeSpeed: 0,
+        backSpeed: 0,
         backDelay: 1000,
         loop: true,
         showCursor: true,
