--- a/giveaways.html
+++ b/giveaways.html
@@ -8,7 +8,7 @@
     <script src="typed.js"></script>
     <script type="text/javascript" src="giveaways.js"></script>
   </head>
-  <body style="background-color:lightgrey;">
+  <body style="background-color:grey;">
   <center><h1 class="element"></h1></center>
   <center id="p5"><a href="https://docs.google.com/forms/d/1PGXNkw0mjdxBn3aZGMix_z7yaHt1-iXIqsR8jfEvtDY/viewform?c=0&w=1"><button id="p4" class="myButton">PS4 Giveaway</button></a></center>
   <center><img id="p4_pic" src="http://iacom1-a.akamaihd.net/produtos/01/00/item/116661/3/116661370_1GG.png" height="250" width="250"></center>
