--- a/gmn.html
+++ b/gmn.html
@@ -16,9 +16,10 @@
 			<input type="number" name="guess" size="15" placeholder="Your Guess"><br>
 		</form><br>
 		<center>
-		<button>Submit</button>
-		<button>Clear</button>
+		<button id="submit">Submit</button>
+		<button id="clear">Clear</button>
 		</center>
 		<div id=”response”></div>
+		<div id="guesses" style="color:blue">></div>
 	</body>
 </html
