--- a/gmn.html
+++ b/gmn.html
@@ -20,6 +20,6 @@
 		<button id="clear">Clear</button>
 		</center>
 		<div id=”response”></div>
-		<div id="guesses" style="color:blue">></div>
+		<div id="guesses" style="color:blue"></div>
 	</body>
 </html
