--- a/gmn.html
+++ b/gmn.html
@@ -13,7 +13,7 @@
 		<h3>Try to guess it!</h3>
 		<form>
 			Guess A Number<br>
-			<input type="number" name="guess" size="15" placeholder="Your Guess"><br>
+			<input type="number" name="guess" id="guess" size="15" placeholder="Your Guess"><br>
 		</form><br>
 		<center>
 		<button id="submit">Submit</button>
