--- a/gmn.html
+++ b/gmn.html
@@ -20,6 +20,11 @@
 		<button id="clear">Clear</button>
 		</center>
 		<div id=”response”></div>
-		<div id="guesses" style="background-color:blue"></div>
+		<div style="background-color:blue">
+			<h2>Your Guesses:</h2>
+			<ul id="guesses">
+				
+			</ul>
+		</div>
 	</body>
 </html
