--- a/gmn.html
+++ b/gmn.html
@@ -20,7 +20,7 @@
 		<button id="clear">Clear</button>
 		</center>
 		<div id=”response”></div>
-		<div style="background-color:blue">
+		<div id="guess_list" style="background-color:#6699cc">
 			<h2>Your Guesses:</h2>
 			<ul id="guesses">
 				
