--- a/gmn.html
+++ b/gmn.html
@@ -20,8 +20,8 @@
 		<button id="clear">Clear</button>
 		</center>
 		<div id=”response”></div>
-		<div id="guess_list" style="background-color:#6699cc">
-			<h2>Your Guesses:</h2>
+		<div id="guess_list">
+			<h2>Your Guesses</h2>
 			<ul id="guesses">
 				
 			</ul>
