--- a/gmn.html
+++ b/gmn.html
@@ -20,7 +20,7 @@
 		<button id="clear">Clear</button>
 		</center>
 		<div id=”response”></div>
-		<div id="guess_list">
+		<div id="guess_list" style="overflow:scroll">
 			<h2>Your Guesses</h2>
 		</div>
 	</body>
