--- a/gmn.html
+++ b/gmn.html
@@ -9,6 +9,7 @@
 	        <script type="text/javascript" src="gmn.js"></script>
 	</head>
 	<body>
+		<div id="main_part">
 		<h1>I’m thinking of a number between 1 and 100…</h1>
 		<h3>Try to guess it!</h3>
 		<form>
@@ -19,9 +20,11 @@
 		<button id="submit">Submit</button>
 		<button id="clear">Clear</button>
 		</center>
+		</div>
 		<div id=”response”></div>
 		<div id="guess_list">
 			<h2>Your Guesses</h2>
 		</div>
+		
 	</body>
 </html
