--- a/gmn.html
+++ b/gmn.html
@@ -21,7 +21,7 @@
 		<button id="clear">Clear</button>
 		</center>
 		</div>
-		<div id=”response”></div>
+		<div id="response"></div>
 		<div id="guess_list">
 			<h2>Your Guesses</h2>
 		</div>
