--- a/gmn.html
+++ b/gmn.html
@@ -18,7 +18,7 @@
 		</form><br>
 		<center>
 		<button id="submit">Submit</button>
-		<button id="clear">Clear</button>
+		<a href="sholguin.github.io/gmn.html"><button id="clear">Clear</button></a>
 		</center>
 		</div>
 		<div id="response"></div>
