--- a/gmn.html
+++ b/gmn.html
@@ -20,6 +20,7 @@
 		<button id="submit">Submit</button>
 		<a href="sholguin.github.io/gmn.html"><button id="clear">Clear</button></a>
 		</center>
+		<h5>So far 0 guesses</h5>
 		</div>
 		<div id="response"></div>
 		<div id="guess_list">
