--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <nav id="primary_nav_wrap">
   <ul>
-    <li class="current-menu-item"><a href="sholguin.github.io">Home</a></li>
+    <li class="current-menu-item"><a href="https://sholguinasc.github.io">Home</a></li>
     <li><a href="#">Games</a>
       <ul>
         <li><a href="./gmn.html">Guess My Number</a></li>
