--- a/gmn.html
+++ b/gmn.html
@@ -18,7 +18,7 @@
 		</form><br>
 		<center>
 		<button id="submit">Submit</button>
-		<a href="sholguin.github.io/gmn.html"><button id="clear">Clear</button></a>
+		<a href="https://sholguinasc.github.io/gmn.html"><button id="clear">Clear</button></a>
 		</center>
 		<h5>So far 0 guesses</h5>
 		</div>
