--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
     <li><a href="#">Contact Steven</a></li>
   </ul>
 </nav>
+<div id="alert">
+  <p>Due to server problems, Steven's Store, Contact Steven, and a few Games are currently not working. Our team is currently working on trying to fix the problem.</p>
+</div>
 </div>
 <div id="copyright">
   <center><h3>©2016 Steven Productions</h3></center>
